syntax = "proto3";

import "decimal.proto";

option csharp_namespace = "Ingredients.Protos";

package ingredients;

service IngredientsService
{
  rpc GetToppings(GetToppingsRequest) returns (GetToppingsResponse);
  rpc DecrementToppings(DecrementToppingsRequest) returns (DecrementToppingsResponse);
  rpc GetCrusts(GetCrustsRequest) returns (GetCrustsResponse);
  rpc DecrementCrusts(DecrementCrustsRequest) returns (DecrementCrustsResponse);
}

message Topping {
  reserved 3; // Was double price
  string id = 1;
  string name = 2;
  customTypes.DecimalValue price = 4;
}

message Crust {
  string id = 1;
  string name = 2;
  int32 size = 3;
  customTypes.DecimalValue price = 4;
}
message GetToppingsRequest {}

message GetToppingsResponse {
  repeated Topping toppings = 1;
}

message GetCrustsRequest {}

message GetCrustsResponse {
  repeated Crust crusts = 1;
}

message DecrementToppingsRequest {
  repeated string topping_ids = 1;
}

message DecrementToppingsResponse {}

message DecrementCrustsRequest {
  repeated string crust_ids = 1;
}

message DecrementCrustsResponse {}
